--- a/pandas/Pandas2.ipynb
+++ b/pandas/Pandas2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "1   200    F  Mary"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "1   200    F  Mary    Female"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "1   200    F  Mary"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "1   200    F  Mary       6"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "1   200    F  Mary"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "RangeIndex(start=0, stop=2, step=1)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
        "b     200      F  Mary"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "Name: a, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
        "'M'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,10 +561,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Credit</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>100</td>\n",
+       "      <td>M</td>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>200</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Mary</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Credit Gender  Name\n",
+       "a     100      M  John\n",
+       "b     200      F  Mary"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[:2]  # slicing  - row 0 to row 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Retrieves all rows starting from row 0 to 2 (non-inclusive) and all columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -621,14 +691,14 @@
     }
    ],
    "source": [
-    "df.iloc[:2]  # slicing  - row 0 to row 1"
+    "df.iloc[:2, :]  # slicing  - row 0 to row 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Retrieves all rows starting from row 0 to 2 (non-inclusive) and all columns."
+    "Retrieves rows starting from row 0 to 2 (non-inclusive) and columns from column 0 to 3 (non-inclusive)."
    ]
   },
   {
@@ -657,7 +727,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Credit</th>\n",
        "      <th>Gender</th>\n",
        "      <th>Name</th>\n",
        "    </tr>\n",
@@ -665,13 +734,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>a</th>\n",
-       "      <td>100</td>\n",
        "      <td>M</td>\n",
        "      <td>John</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>b</th>\n",
-       "      <td>200</td>\n",
        "      <td>F</td>\n",
        "      <td>Mary</td>\n",
        "    </tr>\n",
@@ -680,9 +747,9 @@
        "</div>"
       ],
       "text/plain": [
-       "   Credit Gender  Name\n",
-       "a     100      M  John\n",
-       "b     200      F  Mary"
+       "  Gender  Name\n",
+       "a      M  John\n",
+       "b      F  Mary"
       ]
      },
      "execution_count": 14,
@@ -691,14 +758,14 @@
     }
    ],
    "source": [
-    "df.iloc[:2, :]  # slicing  - row 0 to row 1"
+    "df.iloc[:2, 1:3]  # slicing  - row 0 to row 1, column 1 to 2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Retrieves rows starting from row 0 to 2 (non-inclusive) and columns from column 0 to 3 (non-inclusive)."
+    "Retrieves rows starting from row 0 to 5 (non-inclusive) and columns from column 1 to 5 (non-inclusive)."
    ]
   },
   {
@@ -758,14 +825,14 @@
     }
    ],
    "source": [
-    "df.iloc[:2, 1:3]  # slicing  - row 0 to row 1, column 1 to 2"
+    "df.iloc[:5, 1:5] # slice indexers which allow out-of-bounds indexing"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Retrieves rows starting from row 0 to 5 (non-inclusive) and columns from column 1 to 5 (non-inclusive)."
+    "Accessing data by labels in a DataFrame using 'loc()'. Below, we specify the start and end index values of the corresponding rows to be retrieved."
    ]
   },
   {
@@ -794,6 +861,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Credit</th>\n",
        "      <th>Gender</th>\n",
        "      <th>Name</th>\n",
        "    </tr>\n",
@@ -801,11 +869,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>a</th>\n",
+       "      <td>100</td>\n",
        "      <td>M</td>\n",
        "      <td>John</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>b</th>\n",
+       "      <td>200</td>\n",
        "      <td>F</td>\n",
        "      <td>Mary</td>\n",
        "    </tr>\n",
@@ -814,9 +884,9 @@
        "</div>"
       ],
       "text/plain": [
-       "  Gender  Name\n",
-       "a      M  John\n",
-       "b      F  Mary"
+       "   Credit Gender  Name\n",
+       "a     100      M  John\n",
+       "b     200      F  Mary"
       ]
      },
      "execution_count": 16,
@@ -825,14 +895,14 @@
     }
    ],
    "source": [
-    "df.iloc[:5, 1:5] # slice indexers which allow out-of-bounds indexing"
+    "df.loc['a':'b']  # loc - access by label(s). Note: iloc - is integer-based access"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Accessing data by labels in a DataFrame using 'loc()'. Below, we specify the start and end index values of the corresponding rows to be retrieved."
+    "Accessing non-existent labels does not constitute to a crash. "
    ]
   },
   {
@@ -895,76 +965,6 @@
     }
    ],
    "source": [
-    "df.loc['a':'b']  # loc - access by label(s). Note: iloc - is integer-based access"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Accessing non-existent labels does not constitute to a crash. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Credit</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>a</th>\n",
-       "      <td>100</td>\n",
-       "      <td>M</td>\n",
-       "      <td>John</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>b</th>\n",
-       "      <td>200</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Mary</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Credit Gender  Name\n",
-       "a     100      M  John\n",
-       "b     200      F  Mary"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "df.loc['a':'d']"
    ]
   },
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
        "Name: Credit, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
        "b     200"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1121,7 @@
        "b     200      F"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
        "g    100      M  Jordan"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1323,7 @@
        "e    120      F   Jean"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1414,7 +1414,7 @@
        "g    100      M  Jordan"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1503,7 @@
        "3       Tom   12    NaN     2"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1530,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1543,7 @@
        "Name: age, dtype: bool"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1617,7 +1617,7 @@
        "3    Tom   12    NaN     2"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1712,12 +1712,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the same technique but specifying only the columns we want."
+    "Using the same technique to fetch rows based on a condition (i.e. values of 'age' cloumns that are greater than 10), but specifying only a subset of the columns."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1766,7 @@
        "3    Tom   12"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1779,8 +1779,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below, isnull() returns a Pandas Series of True/False with respect to a column in a DataFrame. If any row of that column has a NaN value, the corresponding row in the Pandas Series will be True. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1793,19 +1800,25 @@
        "Name: marks, dtype: bool"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# check for missing data - isnull()\n",
     "df2['marks'].isnull()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DataFrame returns rows that correspond to True values in the Pandas Series. The last row of the DataFrame is returned as only the last row in the Pandas Series has a True value.  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1852,21 +1865,59 @@
        "3  Tom   12    NaN     2"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# extract those rows with missing marks\n",
+    "# extract those rows with missing marks \n",
     "df_missing_marks = df2[(df2['marks'].isnull())]\n",
     "\n",
     "df_missing_marks"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The notnull(), when applied to a column in a DataFrame, has a True in the returned Pandas Series when the corresponding row does not have a NaN value."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     True\n",
+       "1     True\n",
+       "2     True\n",
+       "3    False\n",
+       "Name: marks, dtype: bool"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2['marks'].notnull()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can then fetch rows in the DataFrame that correspond to a True value in the above Pandas Series."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1929,15 +1980,15 @@
        "2     Harry   11   80.0     2"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# extract those rows with marks \n",
-    "# notna() : detect existing (non-missing) values.\n",
-    "df_new = df2[(df2['marks'].notna()) ]\n",
+    "# notnull() : detect existing (non-missing) values.\n",
+    "df_new = df2[(df2['marks'].notnull()) ]\n",
     "\n",
     "df_new"
    ]
