--- a/pandas/Pandas1.ipynb
+++ b/pandas/Pandas1.ipynb
@@ -11,90 +11,349 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pandas is a Python packages with a number of data analysis tools.\n",
-    "Its Series and DataFrame data structures provides way to represent data for data analysis\n",
+    "Pandas is a Python packages with a number of data analysis tools. Its Series and DataFrame data structures provides way to represent data for data analysis.\n",
+    "\n",
     "With Pandas, we store data in various formats include CSV, MS Excel, Text file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import the Pandas library into the environment\n",
+    "# import libraries into the environment\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# A series is a one-dimensional array.  It is possible to change the value but not the size of the series\n",
-    "series1 = pd.Series([10, 20, 30])\n",
-    "print(series1)  # output: first column - indexes of the elements\n",
-    "                #         second column - the elements"
+    "A series is a one-dimensional array.  It is possible to change the value but not the size of the series."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    10\n",
+      "1    20\n",
+      "2    30\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# create a series data structure from numpy array\n",
+    "series1 = pd.Series([10, 20, 30])\n",
     "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
+    "# first column - indexes of the elements\n",
+    "# second column - the elements\n",
+    "print(series1) \n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a Pandas Series data structure from NumPy array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     John\n",
+      "1     Mary\n",
+      "2    James\n",
+      "3     Lisa\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
     "names = np.array(['John', 'Mary', 'James', 'Lisa'])\n",
     "s2 = pd.Series(names)\n",
     "print(s2)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Dataframe resembles a table\n",
+    "A Pandas Dataframe resembles a 2D table, with columns and rows.\n",
+    "\n",
+    "Here, the 'Name', 'Age' and 'PhoneNumber' are the column-names of the DataFrame.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Name  Age PhoneNumber\n",
+      "0   John   21    65160001\n",
+      "1   Mary   25    65160002\n",
+      "2  James   26    65160003\n",
+      "3   Lisa   28    65160004\n",
+      "Name           object\n",
+      "Age             int64\n",
+      "PhoneNumber    object\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
     "df = pd.DataFrame ({\n",
     "    \"Name\": ['John', 'Mary', 'James', 'Lisa'],\n",
     "    \"Age\" : [21, 25, 26, 28],\n",
     "    \"PhoneNumber\" : ['65160001', '65160002', '65160003', '65160004']\n",
     "})\n",
     "\n",
-    "print(df)"
+    "print(df)           # prints values in DataFrame\n",
+    "print(df.dtypes)    # prints data-types of variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0\n",
+       "0  1\n",
+       "1  2\n",
+       "2  3\n",
+       "3  4"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "numList =[1, 2, 3, 4]\n",
+    "# Python List\n",
+    "numList = [1, 2, 3, 4]\n",
     "\n",
+    "# construct a Pandas DataFrame from a Python List.\n",
     "df = pd.DataFrame(numList)\n",
-    "print(df)\n",
+    "\n",
+    "# print out values in DataFrame\n",
+    "# as the column-names or index-names are not provided,\n",
+    "# default ones are given, which starts from 0.\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Printing out the data-type for each of the variable in the DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    int64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
     "print(df.dtypes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Name  Salary\n",
+      "0   John    7000\n",
+      "1   Mary    3000\n",
+      "2  James    6000\n",
+      "3   Lisa    8000\n",
+      "Name      object\n",
+      "Salary     int64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
-    "names =  [['John', 7000], ['Mary', 3000], ['James', 6000], ['Lisa', 8000]]\n",
+    "names = [['John', 7000], ['Mary', 3000], ['James', 6000], ['Lisa', 8000]]\n",
     "    \n",
-    "df = pd.DataFrame(names, columns =['Name', 'Salary'], dtype=float)    # set the datatype (Age) to float\n",
+    "df = pd.DataFrame(names, columns =['Name', 'Salary'])    # set the datatype (Age) to float\n",
+    "\n",
     "print(df)\n",
-    "print(df.dtypes)\n",
-    "df.describe() # summary statistics of the data contained in the dataframe"
+    "print(df.dtypes)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Summary Statistics of the data in the DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>6000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2160.246899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5250.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>6500.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>7250.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>8000.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Salary\n",
+       "count     4.000000\n",
+       "mean   6000.000000\n",
+       "std    2160.246899\n",
+       "min    3000.000000\n",
+       "25%    5250.000000\n",
+       "50%    6500.000000\n",
+       "75%    7250.000000\n",
+       "max    8000.000000"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe() "
    ]
   },
   {
@@ -288,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
